--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div id="orange">
         <div id="yellow">
           <div id="green">
-            <div id="blue">
+            <div id="violet">
               <div id="indigo">
                 <div></div> <!-- the grandest child div -->
               </div>
